<resources>
    <string name="app_name">READ &amp; SCAN QR CODE</string>
    <string name="lbl_titulo_str">Lector de Codigos de Barra y QR</string>
    <string name="edt_codigo_str">Capture el dato a generar a codigo QR</string>
    <string name="btn_generar_str">GENERAR</string>
    <string name="btn_scanear_str">ESCANEAR</string>
    <string name="btn_limpiar_str">LIMPIAR</string>
    <string name="btn_foto_str">FOTO</string>
</resources>